--- a/l4a/src/component/main/main.css
+++ b/l4a/src/component/main/main.css
@@ -1,7 +1,62 @@
 #mainSection {
-height: 100%;
-width: 100%;
-margin-top: 10%;
+    height: 100%;
+    width: 100%;
+    margin-top: 20%;
+    margin-bottom: 15%;
+    }
+    
+.mainContent {
+    width: 95%;
+    height: 350px;
+    border: 2px solid #C0C0C0;
+    margin: auto;
+    padding-left: 5%;
+    padding-right: 2%;
+    border-radius: 10px;
+    box-shadow: 0 2px 1px rgba(0,0,0,0.09), 0 4px 2px rgba(0,0,0,0.09), 0 8px 4px rgba(0,0,0,0.09), 0 16px 8px rgba(0,0,0,0.09), 0 32px 16px rgba(0,0,0,0.09);
+}
+    
+.levTitle {
+    font-size: 50px;
+    text-align: left;
+    color: #EB729A;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 900;
+}
+    
+.levNoun {
+    margin-left: 10%;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #C0C0C0;
+}
+    
+.mainContentText {
+    margin-top: 20%;
+    color: #C0C0C0;
+}
+    
+.mainContentSubText{
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Crimson Text', serif;
+    color: #C0C0C0;
+
+}
+.mainContentP {
+    font-weight: 400;
+    font-family: 'Crimson Text', serif;
+    font-size: 16px;
+    color: #C0C0C0;
+    }
+
+@media (min-width: 992px) {
+
+#mainSection {
+    height: 100%;
+    width: 100%;
+    margin-top: 10%;
 }
 
 .mainContent {
@@ -11,11 +66,13 @@ margin-top: 10%;
     margin: auto;
     padding-left: 3%;
     padding-right: 2%;
-}
+    border-radius: 10px;
+    box-shadow: 0 2px 1px rgba(0,0,0,0.09), 0 4px 2px rgba(0,0,0,0.09), 0 8px 4px rgba(0,0,0,0.09), 0 16px 8px rgba(0,0,0,0.09), 0 32px 16px rgba(0,0,0,0.09);}
 
 .levTitle {
     font-size: 68px;
     text-align: left;
+    color: #EB729A;
 }
 
 .levNoun {
@@ -23,6 +80,7 @@ margin-top: 10%;
     font-size: 40px;
     text-transform: uppercase;
     font-weight: 900;
+    color: #C0C0C0;
 }
 
 .mainContentText {
@@ -33,4 +91,6 @@ margin-top: 10%;
     font-size: 20px;
 }
 .mainContentP {
+}
+
 }
