--- a/l4a/src/component/nav/nav.css
+++ b/l4a/src/component/nav/nav.css
@@ -5,12 +5,15 @@
 a {
   text-decoration: none;
   color: #EB729A;
-  font-size: 10px;
+  font-size: 25px;
   float: right;
+  font-family: 'Crimson Text', serif;
+
 }
 .nav-item{
   color: #EB729A !important;
   margin: 1% 3%;
+
 }
 
 
@@ -32,7 +35,6 @@ a:hover {
   0 0 10px #fff,
 }
 .nav-item{
-  color: #FFC107 !important;
   text-shadow:
    0 0 5px #fff,
    0 0 5px #fff,
@@ -40,6 +42,5 @@ a:hover {
 }
 .nav-item:visited {
   color: #EB729A;
-
 }
 }
